<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="20dp"
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shadow"
            android:drawableLeft="@drawable/ic_search_icon"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:textColorHint="@color/grey_light"
            android:queryHint="Search Movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

