...
      android:textSize="16sp"
      android:textStyle="bold"
      android:visibility="gone"
      app:layout_constraintTop_toBottomOf="@+id/search_layout_id" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_movie_list"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_margin="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_artist_items_title"
...
