...
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

          <!-- ================= Chain =================== -->

          <ImageButton
            android:id="@+id/ib_average_vote"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_average_count"
            app:layout_constraintEnd_toStartOf="@+id/iv_movie_duration"
...
